update frontend to include 2016 files

--- a/static/draft.html
+++ b/static/draft.html
@@ -395,13 +395,12 @@
             <li data-value="1B" class="sub active"><a href="#">LF</a></li>
             <li data-value="2B" class="sub active"><a href="#">CF</a></li>
             <li data-value="3B" class="sub active"><a href="#">RF</a></li>
-            <li data-value="Infield" class="category active"><a href="#">Infield</a></li>
-            <li data-value="1B" class="sub active"><a href="#">1B</a></li>
-            <li data-value="2B" class="sub active"><a href="#">2B</a></li>
-            <li data-value="3B" class="sub active"><a href="#">3B</a></li>
-            <li data-value="SS" class="sub active"><a href="#">SS</a></li>
+            <li data-value="Pitching" class="category active"><a href="#">Infield</a></li>
+            <li data-value="SP" class="sub active"><a href="#">1B</a></li>
+            <li data-value="RP" class="sub active"><a href="#">2B</a></li>
+            <li data-value="Closer" class="sub active"><a href="#">3B</a></li>
             
-            
+            <li data-value="Util" class="all active"><a href="#">UTIL</a></li>
             <li data-value="All" class="disabled all active"><a href="#">Select All</a></li>
             <li data-value="None" class="none"><a href="#">Select None</a></li>
 
